profiling rest endpoint, added gpu to http server for now

--- a/nos/cli/templates/docker-compose.serve.yml.j2
+++ b/nos/cli/templates/docker-compose.serve.yml.j2
@@ -31,6 +31,13 @@ services:
     ipc: host
     depends_on:
       - nos-server
+{%- if runtime == 'gpu' %}
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
+{% endif %}
 {% endif %}
   nos-server:
     image: {{ image }}
